make it more backwards compatible
also removed unused imports