@@ -13,13 +13,14 @@ import xyz.wagyourtail.jsmacros.client.api.sharedclasses.RenderCommon;
 import xyz.wagyourtail.jsmacros.client.api.sharedinterfaces.IDraw2D;
 
 import java.util.Comparator;
+import java.util.stream.Collectors;
 
 @Mixin(InGameHud.class)
 class MixinInGameHud {
     @Inject(at = @At(value = "FIELD", target = "Lnet/minecraft/client/option/GameOptions;debugEnabled:Z"), method = "render")
     public void renderHud(MatrixStack matrixStack, float f, final CallbackInfo info) {
 
-        for (IDraw2D<Draw2D> h : ImmutableSet.copyOf(FHud.overlays).stream().sorted(Comparator.comparingInt(RenderCommon.RenderElement::getZIndex)).toList()) {
+        for (IDraw2D<Draw2D> h : ImmutableSet.copyOf(FHud.overlays).stream().sorted(Comparator.comparingInt(RenderCommon.RenderElement::getZIndex)).collect(Collectors.toList())) {
             try {
                 h.render(matrixStack);
             } catch (Throwable ignored) {}
