@@ -22,6 +22,7 @@ import xyz.wagyourtail.jsmacros.client.tick.TickBasedEvents;
 import xyz.wagyourtail.jsmacros.forge.client.api.classes.CommandBuilderForge;
 
 import java.util.Comparator;
+import java.util.stream.Collectors;
 
 public class ForgeEvents {
     private static final MinecraftClient client = MinecraftClient.getInstance();
@@ -74,7 +75,7 @@ public class ForgeEvents {
     }
 
     public static void renderHudListener(ForgeGui gui, MatrixStack mStack, float partialTicks, int width, int height) {
-        for (IDraw2D<Draw2D> h : ImmutableSet.copyOf(FHud.overlays).stream().sorted(Comparator.comparingInt(RenderCommon.RenderElement::getZIndex)).toList()) {
+        for (IDraw2D<Draw2D> h : ImmutableSet.copyOf(FHud.overlays).stream().sorted(Comparator.comparingInt(RenderCommon.RenderElement::getZIndex)).collect(Collectors.toList())) {
             try {
                 h.render(mStack);
             } catch (Throwable ignored) {}
